--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <p></p>
           <h1 class="heading">
             <span class="accent-bold-orange">Only 3 days left</span> to fund
-            this project
+            this project.
           </h1>
           <p>
             Join the <strong>42</strong> other donors who have already supported
@@ -28,7 +28,13 @@
           <form>
             <span class="primary-button donation-wrapper left">
               <span>$</span>
-              <input type="text" value="50" id="donation-amount" size="2" />
+              <input
+                type="text"
+                value="50"
+                id="donation-amount"
+                size="2"
+                maxlength="2"
+              />
             </span>
             <input
               class="primary-button btn-green right"
